# python-project-83

./: .env.example  .gitignore  Makefile  README.md  app.py  build.sh  database.sql  db_connection.py  pyproject.toml  ql -U postgres -d page_analyzer -W  run.py  setup.cfg  tools.py
.github/workflows/: ci.yml
hexlet_code/: __init__.py
page_analyzer/: __init__.py  app.py  db.py  db_connection.py  http_client.py  tools.py  validation.py
page_analyzer/templates/: index.html  url_details.html  urls.html
templates/: index.html  url_details.html
