[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Astrella.Ne <mycuttingapp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flake8 = "^7.1.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
validators = "^0.18.2"
psycopg = "^3.1.0"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
